[LPMP-5] refactoring RoleOptions and added SqlBuilder for generalization of create and alter role